Fix | Composer json Autoload updated

--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "require": {},
     "autoload": {
         "psr-4": {
-            "Shakib\\Post\\": "src/"
+            "ShakibZaman\\Post\\": "src/"
         }
     },
     "extra": {
