--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "shakibzaman/post1",
+    "name": "shakibzaman/post",
     "description": "Generate Posts",
     "type": "library",
     "license": "MIT",
